--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.0",
     "@tanstack/react-query": "^5.71.0",
     "axios": "^1.8.4",
@@ -31,7 +32,9 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.2",
+    "react-number-format": "^5.4.4",
     "react-router-dom": "^7.4.1",
+    "shadcn": "^3.2.1",
     "sonner": "^2.0.3",
     "swiper": "10.2.0",
     "tailwind-merge": "^3.2.0",
