--- a/package.json
+++ b/package.json
@@ -17,18 +17,21 @@
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-query": "^5.71.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "eslint-config-airbnb": "^19.0.4",
     "lucide-react": "^0.507.0",
     "next-themes": "^0.4.6",
     "qs": "^6.14.0",
     "react": "^19.0.0",
+    "react-day-picker": "^9.11.3",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.2",
