--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.4",
@@ -27,6 +28,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "eslint-config-airbnb": "^19.0.4",
+    "framer-motion": "^12.24.10",
     "lucide-react": "^0.507.0",
     "next-themes": "^0.4.6",
     "qs": "^6.14.0",
