--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@tanstack/react-query": "^5.71.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -29,7 +30,7 @@
     "date-fns": "^4.1.0",
     "eslint-config-airbnb": "^19.0.4",
     "framer-motion": "^12.24.10",
-    "lucide-react": "^0.507.0",
+    "lucide-react": "^0.563.0",
     "next-themes": "^0.4.6",
     "qs": "^6.14.0",
     "react": "^19.0.0",
@@ -39,6 +40,7 @@
     "react-hook-form": "^7.56.2",
     "react-number-format": "^5.4.4",
     "react-router-dom": "^7.4.1",
+    "recharts": "2.15.4",
     "shadcn": "^3.2.1",
     "sonner": "^2.0.3",
     "swiper": "10.2.0",
